Added styles for rooms page
