# server/SmartHome.Data/Context/DevicesContext.cs
@@ -33,11 +33,11 @@ public partial class ApplicationDbContext : DbContext
     private void CreateDevicesData(ModelBuilder modelBuilder)
     {
         modelBuilder.Entity<UserDevice>().HasData(
-                  new UserDevice { UserDeviceId = 1, UserId = 2, UserRoomId = 1, DeviceTypeId = 1, DeviceName = "Room Light", Comment = null, IndicatorColor = "red", },
-                  new UserDevice { UserDeviceId = 2, UserId = 2, UserRoomId = 1, DeviceTypeId = 3, DeviceName = "Room TV", Comment = null, IndicatorColor = "blue", },
-                  new UserDevice { UserDeviceId = 3, UserId = 2, UserRoomId = 1, DeviceTypeId = 1, DeviceName = null, Comment = null, IndicatorColor = null, },
-                  new UserDevice { UserDeviceId = 4, UserId = 2, UserRoomId = 3, DeviceTypeId = 2, DeviceName = null, Comment = null, IndicatorColor = "green", },
-                  new UserDevice { UserDeviceId = 5, UserId = 2, UserRoomId = 3, DeviceTypeId = 4, DeviceName = null, Comment = null, IndicatorColor = "blue", }
+                  new UserDevice { UserDeviceId = 1, UserId = 2, UserRoomId = 1, DeviceTypeId = 1, DeviceName = "Room Light",   Comment = null, IndicatorColor = "red",     DeviceIcon = "icons/devices/light.png",     CustomTags = "Ambient|Dimmable",    IsOn = true },
+                  new UserDevice { UserDeviceId = 2, UserId = 2, UserRoomId = 1, DeviceTypeId = 3, DeviceName = "Room TV",      Comment = null, IndicatorColor = "blue",    DeviceIcon = "icons/devices/tv.png",        CustomTags = "Smart TV|WiFi",       IsOn = true },
+                  new UserDevice { UserDeviceId = 3, UserId = 2, UserRoomId = 1, DeviceTypeId = 1, DeviceName = null,           Comment = null, IndicatorColor = null,      DeviceIcon = "icons/devices/light.png",     CustomTags = "Dimmable",            IsOn = false },
+                  new UserDevice { UserDeviceId = 4, UserId = 2, UserRoomId = 3, DeviceTypeId = 2, DeviceName = null,           Comment = null, IndicatorColor = "green",   DeviceIcon = "icons/devices/camera.png",    CustomTags = "WiFi",                IsOn = false },
+                  new UserDevice { UserDeviceId = 5, UserId = 2, UserRoomId = 3, DeviceTypeId = 4, DeviceName = null,           Comment = null, IndicatorColor = "blue",    DeviceIcon = "icons/devices/fridge.png",    CustomTags = "",                    IsOn = true }
         );
     }
 }
