# server/SmartHome.Web/Controllers/DevicesController.cs
@@ -1,4 +1,5 @@
 using Microsoft.AspNetCore.Mvc;
+using SmartHome.Core.Domain.Devices;
 using SmartHome.Core.Domain.Enums;
 using SmartHome.Core.Services;
 using SmartHome.Web.Auth;
@@ -41,6 +42,70 @@ public class DevicesController : ControllerBase
             DeviceName = x.DeviceName,
             Comment = x.Comment,
             IndicatorColor = x.IndicatorColor,
+            DeviceIcon = x.DeviceIcon,
+            CustomTags = x.CustomTags.Split('|'),
+            IsOn = x.IsOn,
         }).ToList();
+    }
+
+    [Route("set-on")]
+    [HttpPost]
+    [AuthPermission(Permission.DevicesView)]
+    public async Task SetDeviceOn(SetDeviceOnRequest request)
+    {
+        var userId = _authService.GetCurrentUserId();
+        if (userId == null)
+            throw new UnauthorizedAccessException();
+
+        await _devicesService.SetDeviceOn(userId.Value, request.UserDeviceId, request.IsOn);
+    }
+
+    [Route("update-device")]
+    [HttpPost]
+    [AuthPermission(Permission.DevicesEdit)]
+    public async Task UpdateDevice(UpdateDeviceRequest request)
+    {
+        var userId = _authService.GetCurrentUserId();
+        if (userId == null)
+            throw new UnauthorizedAccessException();
+
+        var device = new UserDevice
+        {
+            UserDeviceId = request.UserDeviceId,
+            UserId = userId.Value,
+            DeviceTypeId = request.DeviceTypeId,
+            UserRoomId = request.UserRoomId,
+            DeviceName = request.DeviceName,
+            Comment = request.Comment,
+            IndicatorColor = request.IndicatorColor,
+            DeviceIcon = request.DeviceIcon,
+            CustomTags = String.Join('|', request.CustomTags),
+            IsOn = request.IsOn,
+        };
+        await _devicesService.UpdateUserDevice(userId.Value, request.UserDeviceId, device);
+    }
+
+    [Route("add-device")]
+    [HttpPut]
+    [AuthPermission(Permission.DevicesEdit)]
+    public async Task AddDevice(AddDeviceRequest request)
+    {
+        var userId = _authService.GetCurrentUserId();
+        if (userId == null)
+            throw new UnauthorizedAccessException();
+
+        var device = new UserDevice
+        {
+            UserId = userId.Value,
+            DeviceTypeId = request.DeviceTypeId,
+            UserRoomId = request.UserRoomId,
+            DeviceName = request.DeviceName,
+            Comment = request.Comment,
+            IndicatorColor = request.IndicatorColor,
+            DeviceIcon = request.DeviceIcon,
+            CustomTags = String.Join('|', request.CustomTags),
+            IsOn = request.IsOn,
+        };
+        await _devicesService.AddUserDevice(userId.Value, device);
     }
 }
