# server/SmartHome.Web/Model/Devices/SetDeviceOnRequest.cs
@@ -1,0 +1,9 @@
+﻿namespace SmartHome.Web.Model.Devices
+{
+    public class SetDeviceOnRequest
+    {
+        public long UserDeviceId { get; set; }
+
+        public bool IsOn { get; set; }
+    }
+}
